--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -1,6 +1,7 @@
 @import ./header/header-desktop
 @import ./footer/footer-desktop
 @import ./header/menu
+@import ./components/person
 
 body
 	margin: 0
