--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -78,7 +78,8 @@
   background: #0a4172;
   transition: 0.3s;
   cursor: pointer;
-  opacity: 0.7; }
+  opacity: 0.8;
+  overflow: hidden; }
   .menu .option.search {
     width: 100%;
     background-color: #1a9bfc;
@@ -93,7 +94,9 @@
     line-height: 74px;
     border-left: 3px solid #0a4172;
     box-sizing: border-box;
-    transition: 0.2s; }
+    transition: 0.2s;
+    position: relative;
+    cursor: pointer; }
     .menu .option:hover {
       background-color: #033258;
       border-left: 3px solid #2ca2e6; }
@@ -102,9 +105,35 @@
       font-size: 32px;
       position: relative;
       margin-left: 6px; }
+    .menu .option label {
+      color: white;
+      position: absolute;
+      top: -10px;
+      width: 190px;
+      left: 50px; }
   .menu:hover {
     width: 200px;
     opacity: 1; }
+
+.personList {
+  padding: 20px;
+  box-sizing: border-box; }
+  .personList .person {
+    width: 320px;
+    height: 300px;
+    border: 1px solid gray;
+    border-radius: 4px;
+    overflow: hidden;
+    float: left;
+    margin-right: 20px;
+    position: relative;
+    transition: 0.3s; }
+    .personList .person:hover {
+      height: 550px; }
+    .personList .person img {
+      width: 100%;
+      position: absolute;
+      top: 0; }
 
 body {
   margin: 0;
