--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -2,8 +2,10 @@
 @import ./footer/footer-desktop
 @import ./header/menu
 @import ./components/person
+@import ./components/cart
 
 body
 	margin: 0
 	padding: 0
-	font-family: sans-serif
+	font-family: 'Open Sans'
+	font-weight: 300
