--- a/src/sass/components/person.sass
+++ b/src/sass/components/person.sass
@@ -1,19 +1,48 @@
 .personList
-	padding: 20px
+	padding: 20px 10%
 	box-sizing: border-box
+	width: 100%
+	text-align: center
+	display: -webkit-box
+	display: -moz-box
+	display: -ms-flexbox
+	display: -webkit-flex
+	display: flex
+	-webkit-flex-flow: row wrap
+	justify-content: space-around
+	.person.darkPink
+		border-top: 1px solid #31245a
+		border-bottom: 6px solid #31245a
+	.person.pink
+		border-top: 1px solid #692a7d
+		border-bottom: 6px solid #692a7d
+	.person.lightPink
+		border-top: 1px solid #d81962
+		border-bottom: 6px solid #d81962
 	.person
 		width: 320px
 		height: 300px
-		border: 1px solid gray
 		border-radius: 4px
 		overflow: hidden
-		float: left
 		margin-right: 20px
 		position: relative
 		transition: 0.3s
+		text-align: center
 		&:hover
-			height: 550px
+			height: 480px
+			.info
+				bottom: 0
 		img
 			width: 100%
 			position: absolute
 			top: 0
+			left: 0
+	.info
+		width: 100%
+		height: 200px
+		background-color: rgba(255,255,255,0.85)
+		position: absolute
+		bottom: -400px
+		transition: 0.3s
+		padding: 10px
+		box-sizing: border-box
